# ml-project

./: .gitignore  README.md  main.py  pyproject.toml
bidabi-clone-adapt-translate/: .gitignore  README.md  create_project.py  pyproject.toml  requirements.txt
bidabi-clone-adapt-translate/src/: config.py  main.py  main01.py
bidabi-clone-adapt-translate/src/evaluators/: evaluator.py
bidabi-clone-adapt-translate/src/loaders/: base_loader.py  loader_factory.py
bidabi-clone-adapt-translate/src/orchestrator/: orchestrator.py
bidabi-clone-adapt-translate/src/translators/: translator.py
hooks/: post_gen_project.py  pre_gen_project.py
src/: main.py  main02.py
src/evaluators/: base_evaluator.py
src/loaders/: base_loader.py  csv_loader.py  json_loader.py
src/orchestrator/: pipeline.py
src/processors/: base_processor.py  data_processor.py
src/translators/: base_translator.py
tests/: test_basic.py
