[project]
name = "ml_project"
version = "0.1.0"
description = "Projet ML généré avec Cookiecutter"
authors = [
{ name = "Tasnime" }
]
requires-python = ">= oui"
readme = "README.md"
[tool.setuptools]
packages = ["src"]
[tool.pytest.ini_options]
pythonpath = ["src"]
[tool.black]
line-length = 88
target-version = ["pyoui"]
[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
