[project]
name = "ml-project"
version = "0.1.0"
description = "Cookiecutter ML project"
authors = [{ name = "Visiteur" }]
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true